replace pg-sandbox.bgdi.ch with pg.bgdi.ch

--- a/int.env
+++ b/int.env
@@ -2,7 +2,7 @@ APACHE_BASE_PATH=main
 ALTI_URL=//service-alti.int.bgdi.ch
 API_URL=//mf-chsdi3.int.bgdi.ch
 SHOP_URL=//shop-bgdi.int.bgdi.ch
-DBHOST=pg-sandbox.bgdi.ch
+DBHOST=pg.bgdi.ch
 DBPORT=5432
 DBSTAGING=int
 DEPLOY_TARGET=int
