BGDIINF_SB-2258: Be less verbose on the CI
Made the installation scripts (apt, pip and npm) less verbose on CI.
This helps reading the CI log in case of error.

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -51,6 +51,7 @@ env:
     # Disable some tests
     DYNAMODB_TESTS: 0
     S3_TESTS: 0
+    CI_QUIET: 1
     # The all important USE_PYTHON3 variable is set by the AWS CodeBuild project
     # We do not have AWS S3 and DynmoDB access for now
   parameter-store:
