--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -47,7 +47,6 @@ env:
     SHORTENER_TABLE_REGION: eu-central-1
     SYSTEM_PYTHON_CMD: python3
     BUILD_TARGET: dev
-    GIT_TAG: undefined
     # Disable some tests
     DYNAMODB_TESTS: 0
     S3_TESTS: 0
@@ -63,25 +62,30 @@ phases:
   install:
     runtime-versions:
       python: 3.7
+    commands:
+      - echo "Login to AWS ECR docker registry"
+      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${DOCKER_REGISTRY}
 
 
   pre_build:
     commands:
-      - echo Configuring stuff...
-      - echo "Login to AWS ECR docker registry"
-      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${DOCKER_REGISTRY}
-
-      - echo "CODEBUILD_WEBHOOK_HEAD_REF=${CODEBUILD_WEBHOOK_HEAD_REF} CODEBUILD_WEBHOOK_BASE_REF=${CODEBUILD_WEBHOOK_BASE_REF}"
-      - export GITHUB_BRANCH="${CODEBUILD_WEBHOOK_HEAD_REF#refs/heads/}"
+      - echo "=========== Configuring stuff ====="
       - export PULL_REQUEST=${CODEBUILD_WEBHOOK_TRIGGER#pr/*}
-      - export COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - export GIT_TAG="$(git describe --tags || echo 'no version info')"
-      - echo "GITHUB_BRANCH=${GITHUB_BRANCH} COMMIT_HASH=${COMMIT_HASH} GIT_TAG=${GIT_TAG}"
-
-      - echo "=========== VERSIONS ============="$
+      - export GIT_BRANCH="${CODEBUILD_WEBHOOK_HEAD_REF#refs/heads/}"
+      - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - export GIT_TAG="$(git describe --tags || echo 'unknown')"
+      - export GIT_DIRTY="$(git status --porcelain)"
+      - |-
+        if [ "${GIT_TAG}" = "unknown"  ] ; then
+          DOCKER_IMG_TAG="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_BRANCH//\//_}.${GIT_HASH}"
+        else
+          DOCKER_IMG_TAG="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_TAG}"
+        fi
+      - export DOCKER_IMG_TAG=${DOCKER_IMG_TAG}
+      - export DOCKER_IMG_TAG_LATEST="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_BRANCH//\//_}.latest"
+      - echo "=========== VERSIONS =============="
       - aws --version
       - python --version
-      - python2 --version
       - python3 --version
       - which python3
       - node --version
@@ -95,52 +99,47 @@ phases:
       - echo CODEBUILD_SOURCE_VERSION=${CODEBUILD_SOURCE_VERSION}
       - echo CODEBUILD_BUILD_ID=${CODEBUILD_BUILD_ID}
       - echo CODEBUILD_SOURCE_REPO_URL=${CODEBUILD_SOURCE_REPO_URL}
-      - echo COMMIT_HASH=${COMMIT_HASH}
       - echo PULL_REQUEST=${PULL_REQUEST}
-      - echo GITHUB_BRANCH=${GITHUB_BRANCH}
+      - echo GIT_BRANCH=${GIT_BRANCH}
+      - echo GIT_HASH=${GIT_HASH}
+      - echo GIT_TAG=${GIT_TAG}
+      - echo GIT_DIRTY=${GIT_DIRTY}
+      - echo DOCKER_IMG_TAG=${DOCKER_IMG_TAG}
+      - echo DOCKER_IMG_TAG_LATEST=${DOCKER_IMG_TAG_LATEST}
       - echo BASH=${BASH}
       - echo SHELL=${SHELL}
       - echo CURRENT_DIRECTORY=$(pwd)
       - echo USE_PYTHON3=${USE_PYTHON3}
-      - echo "===========POSGRESQL========================"
+      - echo "=========== POSGRESQL ============="
       - python ./scripts/pg_ready.py
-      - hostname -I
+      - echo "host=$(hostname -I)"
       - make help
-      - echo "==================================="
+      - echo "=========== PREPARE ==============="
+      - make cleanall
+      - make all
   build:
     commands:
+      - echo "=========== BUILD ================="
       - echo Build started on $(date)
-      - make cleanall all
-      - |-
-        if [ "${GIT_TAG}" = "undefined"  ] ; then
-          DOCKER_IMG_TAG="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GITHUB_BRANCH//\//_}.${COMMIT_HASH}"
-        else
-          DOCKER_IMG_TAG="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_TAG}"
-        fi
-      - export DOCKER_IMG_TAG=${DOCKER_IMG_TAG}
-      - export DOCKER_IMG_TAG_LATEST="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GITHUB_BRANCH//\//_}.latest"
-      #- export $(cat dev.env) && docker build -t swisstopo/mf-chsdi3:python3.7  .
-      - echo "Building docker image with tags ${DOCKER_IMG_TAG} and ${DOCKER_IMG_TAG_LATEST}"
       - >
-          docker build
-          --build-arg GIT_HASH="${COMMIT_HASH}"
-          --build-arg GIT_BRANCH="${GITHUB_BRANCH}"
-          --build-arg AUTHOR="CI"
-          --build-arg VERSION="${GIT_TAG}"
-          -t "${DOCKER_IMG_TAG}" -t "${DOCKER_IMG_TAG_LATEST}" .
+        docker build
+        --build-arg GIT_HASH="${GIT_HASH}"
+        --build-arg GIT_BRANCH="${GIT_BRANCH}"
+        --build-arg GIT_DIRTY="${GIT_DIRTY}"
+        --build-arg AUTHOR="CI"
+        --build-arg VERSION="${GIT_TAG}"
+        -t "${DOCKER_IMG_TAG}" -t "${DOCKER_IMG_TAG_LATEST}" .
       - echo Build completed on $(date)
-      - echo "===========SPHINXSEARCH===================="
+      - echo "=========== SPHINXSEARCH =========="
       - .venv/bin/python ./scripts/test_sphinxserver.py
-      - echo "==========Linting===================="
-      - make templates lint
-      - echo "==========Running tests=============="
+      - echo "=========== Linting ==============="
+      - make lint
+      - echo "=========== Running tests ========="
       - make testci
-      - curl -s localhost:${APACHE_PORT}/rest/services/api/MapServer | jq -r '.layers[].layerBodId'
 
   post_build:
     commands:
-      - test "$CODEBUILD_BUILD_SUCCEEDING" = "1"
-      - echo "=========== Pushing image to repository ==========="
+      - echo "=========== Pushing image ========="
       - docker push ${DOCKER_IMG_TAG}
       - docker push ${DOCKER_IMG_TAG_LATEST}
       - echo "Done"
