BGDIINF_SB-2258: Enable parallel testing
This speed ups the CI of about a factor 1.5 to 2.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,8 @@ nocapture = 1
 cover-package = chsdi
 with-coverage = 1
 cover-erase = 1
+processes = -1
+process-timeout = 300
 
 [compile_catalog]
 directory = chsdi/locale
