--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -12,7 +12,6 @@ env:
     DOCKER_REGISTRY: "974517877189.dkr.ecr.eu-central-1.amazonaws.com"
     USER: "aws_code_build"
     APACHE_BASE_PATH: main
-    APACHE_PORT: 8009
     ALTI_URL: //service-alti.dev.bgdi.ch
     API_URL: //mf-chsdi3.dev.bgdi.ch
     SHOP_URL: //shop-bgdi.dev.bgdi.ch
@@ -33,7 +32,6 @@ env:
     MODWSGI_CONFIG: production.ini
     PUBLIC_BUCKET_HOST: public.dev.bgdi.ch
     ROBOTS_FILE: robots.txt
-    RANCHER_LABEL: dev
     SERVER_PORT: 6543
     SPHINXHOST: service-sphinxsearch.dev.bgdi.ch
     VECTOR_BUCKET: mf-chsdi3-bgdi-grid-based-data
@@ -45,14 +43,12 @@ env:
     CACHE_CONTROL: no-cache
     SHORTENER_TABLE_NAME: mf_chsdi3_shorturl
     SHORTENER_TABLE_REGION: eu-central-1
-    SYSTEM_PYTHON_CMD: python3
-    BUILD_TARGET: dev
-    # Disable some tests
-    DYNAMODB_TESTS: 0
-    S3_TESTS: 0
     CI_QUIET: 1
+    SYSTEM_PYTHON_CMD: python3
     # The all important USE_PYTHON3 variable is set by the AWS CodeBuild project
     # We do not have AWS S3 and DynmoDB access for now
+    S3_TESTS: 0
+    DYNAMODB_TESTS: 0
   parameter-store:
     OPENTRANS_API_KEY: "/opentrans_api/key"
     PGUSER: "/postgresql/pguser"
@@ -72,9 +68,20 @@ phases:
       - echo "=========== Configuring stuff ====="
       - export PULL_REQUEST=${CODEBUILD_WEBHOOK_TRIGGER#pr/*}
       - export GIT_BRANCH="${CODEBUILD_WEBHOOK_HEAD_REF#refs/heads/}"
+      - export GIT_BASE_BRANCH="${CODEBUILD_WEBHOOK_BASE_REF#refs/heads/}"
       - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - export GIT_TAG="$(git describe --tags || echo 'unknown')"
       - export GIT_DIRTY="$(git status --porcelain)"
+      # When build are manually triggered by a user, the CODEBUILD_WEBHOOK_HEAD_REF is not
+      # set resulting to an empty GIT_BRANCH. Usually Codebuild don't checkout the branch but
+      # the commit and is on a detached HEAD. Therefore we need to use `git describe --exact-match --all`
+      # that returns either the git tag of the detached HEAD if any or the branch if any or failed.
+      - |
+        if [[ -z "${GIT_BRANCH}" ]];
+        then
+          GIT_BRANCH=$(git describe --exact-match --all 2>/dev/null || echo "unknown")
+          export GIT_BRANCH=${GIT_BRANCH#heads/}
+        fi
       - |-
         if [ "${GIT_TAG}" = "unknown"  ] ; then
           DOCKER_IMG_TAG="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_BRANCH//\//_}.${GIT_HASH}"
@@ -83,6 +90,36 @@ phases:
         fi
       - export DOCKER_IMG_TAG=${DOCKER_IMG_TAG}
       - export DOCKER_IMG_TAG_LATEST="${DOCKER_REGISTRY}/${SERVICE_NAME}:${GIT_BRANCH//\//_}.latest"
+      - echo "=========== Data Staging =========="
+      # The data staging for the tests depends on the BASE branch and on the HEAD branch.
+      # For personal PR to `master` (hotfix or general non milestone dependend work) we need
+      # to use the PROD data staging for the tests otherwise they might fail.
+      # On the otherhand for PR to merge `develop-*` to `master` (on deploy day) we still need to
+      # use DEV data staging because the PROD data staging might not be yet fully ready !
+      # CI is also triggered on a push event, in this case the CODEBUILD_WEBHOOK_BASE_REF is empty
+      # and CODEBUILD_WEBHOOK_HEAD_REF is set to the branch on which the push event occurs. In
+      # this case we use the last commit message to determine if it is a push event triggered by
+      # a PR merge and to determine the base branch from the commit title which is then in the
+      # following form: `Merge pull request #XXXX from ORGANIZATION/BRANCH`
+      - git --no-pager log -1 --oneline
+      - export MERGED_FROM=$(git --no-pager log -1 --format=%s | awk '/Merge pull request [#][0-9]+ from / {print $6}')
+      - |
+        if [[ "${GIT_BASE_BRANCH}" == master ]] && \
+           [[ "${GIT_BRANCH}" != develop* ]];
+        then
+          # PR to merge personal branch (feature or bug) into master
+          export DBSTAGING=prod
+          export DEPLOY_TARGET=prod
+          export GEODATA_STAGING=prod
+        elif [[ "${GIT_BRANCH}" == master ]] && \
+             [[ "${MERGED_FROM}" != geoadmin/develop* ]];
+        then
+          # Push event triggered either by a PR merge on master (except for PR to merge develop* into master)
+          # or by a push on the master branch.
+          export DBSTAGING=prod
+          export DEPLOY_TARGET=prod
+          export GEODATA_STAGING=prod
+        fi
       - echo "=========== VERSIONS =============="
       - aws --version
       - python --version
@@ -91,14 +128,19 @@ phases:
       - node --version
       - bash --version
       - echo "=========== VARIABLES ============="
+      - echo CODEBUILD_INITIATOR=${CODEBUILD_INITIATOR}
       - echo CODEBUILD_RESOLVED_SOURCE_VERSION=${CODEBUILD_RESOLVED_SOURCE_VERSION}
       - echo CODEBUILD_SOURCE_VERSION=${CODEBUILD_SOURCE_VERSION}
+      - echo CODEBUILD_WEBHOOK_EVENT=${CODEBUILD_WEBHOOK_EVENT}
+      - echo CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID=${CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID}
       - echo CODEBUILD_WEBHOOK_BASE_REF=${CODEBUILD_WEBHOOK_BASE_REF}
       - echo CODEBUILD_WEBHOOK_HEAD_REF=${CODEBUILD_WEBHOOK_HEAD_REF=}
       - echo CODEBUILD_WEBHOOK_TRIGGER=${CODEBUILD_WEBHOOK_TRIGGER}
-      - echo CODEBUILD_SOURCE_VERSION=${CODEBUILD_SOURCE_VERSION}
+      - echo CODEBUILD_WEBHOOK_MERGE_COMMIT=${CODEBUILD_WEBHOOK_MERGE_COMMIT}
+      - echo CODEBUILD_WEBHOOK_PREV_COMMIT=${CODEBUILD_WEBHOOK_PREV_COMMIT}
       - echo CODEBUILD_BUILD_ID=${CODEBUILD_BUILD_ID}
       - echo CODEBUILD_SOURCE_REPO_URL=${CODEBUILD_SOURCE_REPO_URL}
+      - echo MERGED_FROM=${MERGED_FROM}
       - echo PULL_REQUEST=${PULL_REQUEST}
       - echo GIT_BRANCH=${GIT_BRANCH}
       - echo GIT_HASH=${GIT_HASH}
@@ -106,6 +148,9 @@ phases:
       - echo GIT_DIRTY=${GIT_DIRTY}
       - echo DOCKER_IMG_TAG=${DOCKER_IMG_TAG}
       - echo DOCKER_IMG_TAG_LATEST=${DOCKER_IMG_TAG_LATEST}
+      - echo DBSTAGING=${DBSTAGING}
+      - echo DEPLOY_TARGET=${DEPLOY_TARGET}
+      - echo GEODATA_STAGING=${GEODATA_STAGING}
       - echo BASH=${BASH}
       - echo SHELL=${SHELL}
       - echo CURRENT_DIRECTORY=$(pwd)
@@ -116,11 +161,12 @@ phases:
       - make help
       - echo "=========== PREPARE ==============="
       - make cleanall
-      - make all
+
   build:
     commands:
       - echo "=========== BUILD ================="
       - echo Build started on $(date)
+      - make all
       - >
         docker build
         --build-arg GIT_HASH="${GIT_HASH}"
@@ -134,11 +180,17 @@ phases:
       - .venv/bin/python ./scripts/test_sphinxserver.py
       - echo "=========== Linting ==============="
       - make lint
-      - echo "=========== Running tests ========="
-      - make testci
 
   post_build:
     commands:
+      - echo "=========== Running tests ========="
+      - |
+        if [[ -z "${GIT_BASE_BRANCH}" ]];
+        then
+          echo "!!!!!!!! WARNING: Could not find the git BASE branch, might be due to manual build !!!!!!!"
+          echo "!!!!!!!! WARNING: STAGING for testing might be incorrect !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+        fi
+      - make testci
       - echo "=========== Pushing image ========="
       - docker push ${DOCKER_IMG_TAG}
       - docker push ${DOCKER_IMG_TAG_LATEST}
