--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,8 @@ env:
   variables:
     SHELL: /bin/bash
     AWS_DEFAULT_REGION: eu-central-1
+    SERVICE_NAME: "mf-chsdi3"
+    USER: "aws_code_build"
     APACHE_BASE_PATH: main
     ALTI_URL: //service-alti.dev.bgdi.ch
     API_URL: //mf-chsdi3.dev.bgdi.ch
@@ -37,11 +39,11 @@ env:
     CACHE_CONTROL: no-cache
     SHORTENER_TABLE_NAME: mf_chsdi3_shorturl
     SHORTENER_TABLE_REGION: eu-central-1
+    CI_QUIET: 1
     # The all important USE_PYTHON3 variable is set by the AWS CodeBuild project
     # We do not have AWS S3 and DynmoDB access for now
     S3_TESTS: 0
     DYNAMODB_TESTS: 0
-    CI_QUIET: 1
   parameter-store:
     OPENTRANS_API_KEY: "/opentrans_api/key"
     PGUSER: "/postgresql/pguser"
@@ -57,23 +59,56 @@ phases:
 
   pre_build:
     commands:
-      - echo Configuring stuff...
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - GITHUB_BRANCH=${CODEBUILD_WEBHOOK_HEAD_REF#refs/heads/*}
+      - echo "=========== Configuring stuff ====="
+      - export PULL_REQUEST=${CODEBUILD_WEBHOOK_TRIGGER#pr/*}
+      - export GIT_BRANCH="${CODEBUILD_WEBHOOK_HEAD_REF#refs/heads/}"
+      - export GIT_BASE_BRANCH="${CODEBUILD_WEBHOOK_BASE_REF#refs/heads/}"
+      - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - export GIT_TAG="$(git describe --tags || echo 'unknown')"
+      - export GIT_DIRTY="$(git status --porcelain)"
+      # When build are manually triggered by a user, the CODEBUILD_WEBHOOK_HEAD_REF is not
+      # set resulting to an empty GIT_BRANCH. Usually Codebuild don't checkout the branch but
+      # the commit and is on a detached HEAD. Therefore we need to use `git describe --exact-match --all`
+      # that returns either the git tag of the detached HEAD if any or the branch if any or failed.
+      - |
+        if [[ -z "${GIT_BRANCH}" ]];
+        then
+          GIT_BRANCH=$(git describe --exact-match --all 2>/dev/null || echo "unknown")
+          export GIT_BRANCH=${GIT_BRANCH#heads/}
+        fi
       - TODAY=$(date '+%Y%m%d')
-      - IMAGE_TAG=r_${TODAY}_${COMMIT_HASH}
-      - COMPOSE_PROJECT_NAME=${IMAGE_TAG}
-      - |-
-           if [ "${CODEBUILD_WEBHOOK_TRIGGER}" = pr/* ]; then
-             PULL_REQUEST=${CODEBUILD_WEBHOOK_TRIGGER#pr/*}
-           fi
-      - |-
-           if [ "${GIT_BRANCH}" != master  ]; then
-               LATEST=${GITHUB_BRANCH:-staging}
-           else
-               LATEST=latest
-           fi
-      - echo "=========== VERSIONS ============="
+      - export IMAGE_TAG=r_${TODAY}_${COMMIT_HASH}
+      - echo "=========== Data Staging =========="
+      # The data staging for the tests depends on the BASE branch and on the HEAD branch.
+      # For personal PR to `master` (hotfix or general non milestone dependend work) we need
+      # to use the PROD data staging for the tests otherwise they might fail.
+      # On the otherhand for PR to merge `develop-*` to `master` (on deploy day) we still need to
+      # use DEV data staging because the PROD data staging might not be yet fully ready !
+      # CI is also triggered on a push event, in this case the CODEBUILD_WEBHOOK_BASE_REF is empty
+      # and CODEBUILD_WEBHOOK_HEAD_REF is set to the branch on which the push event occurs. In
+      # this case we use the last commit message to determine if it is a push event triggered by
+      # a PR merge and to determine the base branch from the commit title which is then in the
+      # following form: `Merge pull request #XXXX from ORGANIZATION/BRANCH`
+      - git --no-pager log -1 --oneline
+      - export MERGED_FROM=$(git --no-pager log -1 --format=%s | awk '/Merge pull request [#][0-9]+ from / {print $6}')
+      - |
+        if [[ "${GIT_BASE_BRANCH}" == master ]] && \
+           [[ "${GIT_BRANCH}" != develop* ]];
+        then
+          # PR to merge personal branch (feature or bug) into master
+          export DBSTAGING=prod
+          export DEPLOY_TARGET=prod
+          export GEODATA_STAGING=prod
+        elif [[ "${GIT_BRANCH}" == master ]] && \
+             [[ "${MERGED_FROM}" != geoadmin/develop* ]];
+        then
+          # Push event triggered either by a PR merge on master (except for PR to merge develop* into master)
+          # or by a push on the master branch.
+          export DBSTAGING=prod
+          export DEPLOY_TARGET=prod
+          export GEODATA_STAGING=prod
+        fi
+      - echo "=========== VERSIONS =============="
       - aws --version
       - python --version
       - python2 --version
@@ -81,39 +116,59 @@ phases:
       - node --version
       - bash --version
       - echo "=========== VARIABLES ============="
+      - echo CODEBUILD_INITIATOR=${CODEBUILD_INITIATOR}
       - echo CODEBUILD_RESOLVED_SOURCE_VERSION=${CODEBUILD_RESOLVED_SOURCE_VERSION}
       - echo CODEBUILD_SOURCE_VERSION=${CODEBUILD_SOURCE_VERSION}
+      - echo CODEBUILD_WEBHOOK_EVENT=${CODEBUILD_WEBHOOK_EVENT}
+      - echo CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID=${CODEBUILD_WEBHOOK_ACTOR_ACCOUNT_ID}
       - echo CODEBUILD_WEBHOOK_BASE_REF=${CODEBUILD_WEBHOOK_BASE_REF}
       - echo CODEBUILD_WEBHOOK_HEAD_REF=${CODEBUILD_WEBHOOK_HEAD_REF=}
       - echo CODEBUILD_WEBHOOK_TRIGGER=${CODEBUILD_WEBHOOK_TRIGGER}
-      - echo CODEBUILD_SOURCE_VERSION=${CODEBUILD_SOURCE_VERSION}
+      - echo CODEBUILD_WEBHOOK_MERGE_COMMIT=${CODEBUILD_WEBHOOK_MERGE_COMMIT}
+      - echo CODEBUILD_WEBHOOK_PREV_COMMIT=${CODEBUILD_WEBHOOK_PREV_COMMIT}
       - echo CODEBUILD_BUILD_ID=${CODEBUILD_BUILD_ID}
       - echo CODEBUILD_SOURCE_REPO_URL=${CODEBUILD_SOURCE_REPO_URL}
-      - echo COMMIT_HASH=${COMMIT_HASH}
+      - echo MERGED_FROM=${MERGED_FROM}
       - echo PULL_REQUEST=${PULL_REQUEST}
-      - echo GITHUB_BRANCH=${GITHUB_BRANCH}
+      - echo GIT_BRANCH=${GIT_BRANCH}
+      - echo GIT_HASH=${GIT_HASH}
+      - echo GIT_TAG=${GIT_TAG}
+      - echo GIT_DIRTY=${GIT_DIRTY}
       - echo IMAGE_TAG=${IMAGE_TAG}
+      - echo DBSTAGING=${DBSTAGING}
+      - echo DEPLOY_TARGET=${DEPLOY_TARGET}
+      - echo GEODATA_STAGING=${GEODATA_STAGING}
       - echo BASH=${BASH}
       - echo SHELL=${SHELL}
+      - echo CURRENT_DIRECTORY=$(pwd)
       - echo USE_PYTHON3=${USE_PYTHON3}
-      - echo "===========POSGRESQL========================"
+      - echo "=========== POSGRESQL ============="
       - python ./scripts/pg_ready.py
-      - hostname -I
-      - echo "============================================"
+      - echo "host=$(hostname -I)"
+      - make help
+      - echo "=========== PREPARE ==============="
+      - make cleanall
+
   build:
     commands:
+      - echo "=========== BUILD ================="
       - echo Build started on $(date)
-      - make cleanall all
+      - make all
       - echo Build completed on $(date)
-      - echo "===========SPHINXSEARCH===================="
+      - echo "=========== SPHINXSEARCH =========="
       - .venv/bin/python ./scripts/test_sphinxserver.py
-      - echo "==========================================="
+      - echo "=========== Linting ==============="
+      - make lint
 
   post_build:
     commands:
-      - echo Linting...
-      - make lint
-      - echo "==========Running tests=============="
+      - echo "=========== Running tests ========="
+      - |
+        if [[ -z "${GIT_BASE_BRANCH}" ]];
+        then
+          echo "!!!!!!!! WARNING: Could not find the git BASE branch, might be due to manual build !!!!!!!"
+          echo "!!!!!!!! WARNING: STAGING for testing might be incorrect !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
+        fi
       - make testci
       - echo "Done"
 
