--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ nose==1.3.7
 papyrus==2.4
 numpy==1.16.5
 PasteDeploy==2.0.1
-Pillow==6.2.0
+Pillow==6.2.0 # still used by the color service
 polib==1.1.0
 psycopg2-binary==2.8.3
 Pygments==2.4.2
@@ -42,7 +42,6 @@ pystache==0.5.4
 python-dateutil==2.8.0
 pytz==2019.2
 PyYAML==5.1.2
-qrcode==6.1
 regex==2019.8.19
 repoze.lru==0.7
 requests==2.22.0
