BGDIINF_SB-2326: Changed loader.js endpoint to use sys-api3 instead of sys-public

--- a/base.ini.in
+++ b/base.ini.in
@@ -51,7 +51,7 @@ host = ${HOST}
 apache_base_path = ${APACHE_BASE_PATH}
 apache_entry_path = ${APACHE_ENTRY_PATH}
 kml_temp_dir = ${KML_TEMP_DIR}
-public_bucket_host = ${PUBLIC_BUCKET_HOST}
+loader_js_bucket_host = ${LOADER_JS_BUCKET_HOST}
 vector_bucket = ${VECTOR_BUCKET}
 datageoadminhost = ${DATAGEOADMINHOST}
 opentrans_api_key = ${OPENTRANS_API_KEY}
