--- a/production.ini.in
+++ b/production.ini.in
@@ -53,7 +53,7 @@ apache_base_path = ${apache_base_path}
 apache_entry_path = ${apache_entry_path}
 kml_temp_dir=${kml_temp_dir}
 http_proxy = ${http_proxy}
-public_bucket_host = ${public_bucket_host}
+loader_js_bucket_host = ${loader_js_bucket_host}
 vector_bucket = ${vector_bucket}
 datageoadminhost = ${datageoadminhost}
 opentrans_api_key = ${opentrans_api_key}
