--- a/apache/wsgi-py3.conf.in
+++ b/apache/wsgi-py3.conf.in
@@ -103,15 +103,15 @@ RewriteRule ^${APACHE_ENTRY_PATH}/(.*)$ ${APACHE_ENTRY_PATH}/shorten/$1 [PT]
 # LoadModule wsgi_module modules/mod_wsgi.so
 
 #don't forget this line
-# WSGISocketPrefix /var/run/wsgi 
+# WSGISocketPrefix /var/run/wsgi
 
 WSGIApplicationGroup %{GLOBAL}
 WSGIPassAuthorization On
 
 WSGIDaemonProcess mf-chsdi3:${APACHE_BASE_PATH} display-name=%{GROUP} user=${MODWSGI_USER} processes=${WSGI_PROCESSES} threads=${WSGI_THREADS} \
    python-path=${INSTALLDIR}/.venv/lib/python3.7/site-packages \
-   python-home=${INSTALLDIR}/.venv  
- 
+   python-home=${INSTALLDIR}/.venv
+
 
 # define the path to the WSGI app
 WSGIScriptAliasMatch ^${APACHE_ENTRY_PATH}/ ${WSGI_APP}
@@ -158,10 +158,11 @@ Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, 
 # kml file downloads
 AliasMatch ^${APACHE_ENTRY_PATH}/kml/(map\.geo\.admin\.ch_KML_\d+\.kml)$ ${KML_TEMP_DIR}/$1
 
-# KML admin
+# KML admin TODO KML
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteRule ^${APACHE_ENTRY_PATH}/admin         https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
+# TODO KML
 <LocationMatch ^${APACHE_ENTRY_PATH}/(admin/kml|static/info.json)>
     AuthType Basic
     AuthName "Your IWI credential"
