--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -36,14 +36,11 @@ env:
     CMSGEOADMINHOST: https://cms.geo.admin.ch
     LINKEDDATAHOST: https://ld.geo.admin.ch
     CACHE_CONTROL: no-cache
-    SHORTENER_TABLE_NAME: mf_chsdi3_shorturl
-    SHORTENER_TABLE_REGION: eu-central-1
     CI_QUIET: 1
     SYSTEM_PYTHON_CMD: python3
     # The all important USE_PYTHON3 variable is set by the AWS CodeBuild project
-    # We do not have AWS S3 and DynmoDB access for now
+    # We do not have AWS S3 access for now
     S3_TESTS: 0
-    DYNAMODB_TESTS: 0
   parameter-store:
     OPENTRANS_API_KEY: "/opentrans_api/key"
     PGUSER: "/postgresql/pguser"
