logging to stdout

--- a/development.ini.in
+++ b/development.ini.in
@@ -62,7 +62,7 @@ qualname = chsdi
 
 [handler_console]
 class = StreamHandler
-args = (sys.stderr,)
+args = (sys.stdout,)
 level = NOTSET
 formatter = generic
 
