--- a/dev.env
+++ b/dev.env
@@ -48,10 +48,11 @@ RANCHER_LABEL=dev
 ROBOTS_FILE=robots_prod.txt
 SERVER_PORT=6543
 SPHINXHOST=service-sphinxsearch.dev.bgdi.ch
-VECTOR_BUCKET=bgdi-grid-based-data
+VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
 WMSHOST=wms.geo.admin.ch
 WMTS_PUBLIC_HOST=wmts.geo.admin.ch
 WSGI_APP=/var/www/vhosts/mf-chsdi3/private/chsdi/apache/application.wsgi
 WSGI_PORT=8009
 WSGI_PROCESSES=1
 WSGI_THREADS=2
+PGUSER=www-data
