--- a/apache/default.conf.in
+++ b/apache/default.conf.in
@@ -7,7 +7,7 @@
     DocumentRoot /var/www/html
 
     LogLevel ${APACHE_LOG_LEVEL}
-    ErrorLog /proc/self/fd/2
+    ErrorLog /dev/sdtout
     # CustomLog /dev/null combined
     CustomLog /dev/stdout  combined
 
@@ -15,9 +15,9 @@
     RewriteRule ^/$ /static/index.html [R=301]
 
     # If the request is not for a valid file
-    RewriteCond %{REQUEST_URI} !^/checker
-    RewriteRule ^/(.*)  http://127.0.0.1:${WSGI_PORT}/$1  [P]
-    ProxyPassReverse / http://127.0.0.1:${WSGI_PORT}/
+    # RewriteCond %{REQUEST_URI} !^/checker
+    # RewriteRule ^/(.*)  http://127.0.0.1:${SERVER_PORT}/$1  [P]
+    # ProxyPassReverse / http://127.0.0.1:${SERVER_PORT}/
         
 
 </VirtualHost>
