--- a/dev.env
+++ b/dev.env
@@ -34,7 +34,6 @@ DBSTAGING=dev
 DEPLOY_TARGET=dev
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=map.geo.admin.ch
-GEODATA_STAGING=dev
 HOST=api3.geo.admin.ch
 HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
 INSTALLDIR=/var/www/vhosts/mf-chsdi3/private/chsdi
@@ -49,9 +48,11 @@ ROBOTS_FILE=robots_prod.txt
 SERVER_PORT=6543
 SPHINXHOST=service-sphinxsearch.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
+VECTOR_BUCKET_REGION=eu-central-1
 WMSHOST=wms.geo.admin.ch
 WMTS_PUBLIC_HOST=wmts.geo.admin.ch
 WSGI_APP=/var/www/vhosts/mf-chsdi3/private/chsdi/apache/application.wsgi
 WSGI_PORT=8009
 WSGI_PROCESSES=1
 WSGI_THREADS=2
+GEODATA_STAGING=test
