use the new pg replica dns pg-geodata-replica.bgdi.ch in frankfurt environment

--- a/dev.env
+++ b/dev.env
@@ -28,7 +28,7 @@ AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
 CMSGEOADMINHOST=https://cms.geo.admin.ch
 DATAGEOADMINHOST=data.geo.admin.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=dev
 DEPLOY_TARGET=dev
