--- a/prod.env
+++ b/prod.env
@@ -1,7 +1,7 @@
 APACHE_BASE_PATH=main
 ALTI_URL=//service-alti.prod.bgdi.ch
 API_URL=//api3.geo.admin.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=prod
 DEPLOY_TARGET=prod
