--- a/int.env
+++ b/int.env
@@ -1,7 +1,7 @@
 APACHE_BASE_PATH=main
 ALTI_URL=//service-alti.int.bgdi.ch
 API_URL=//mf-chsdi3.int.bgdi.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=int
 DEPLOY_TARGET=int
