use the new pg replica dns pg-geodata-replica.bgdi.ch in frankfurt environment

--- a/dev.env
+++ b/dev.env
@@ -7,7 +7,7 @@ AWS_DEFAULT_REGION=eu-central-1
 BRANCH_STAGING=
 CACHE_CONTROL=no-cache
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=dev
 DEBUG=True
