--- a/int.env
+++ b/int.env
@@ -1,6 +1,6 @@
 APACHE_BASE_PATH=main
 API_URL=//mf-chsdi3.int.bgdi.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=int
 DEPLOY_TARGET=int
