--- a/prod.env
+++ b/prod.env
@@ -1,6 +1,6 @@
 APACHE_BASE_PATH=main
 API_URL=//api3.geo.admin.ch
-DBHOST=pg.bgdi.ch
+DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=prod
 DEPLOY_TARGET=prod
