--- a/dev.env
+++ b/dev.env
@@ -2,7 +2,7 @@ APACHE_BASE_PATH=main
 APACHE_ENTRY_PATH=
 APACHE_LOG_LEVEL=debug
 APACHE_PORT=8009
-API_URL=//api3.geo.admin.ch
+API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 BRANCH_STAGING=
 CACHE_CONTROL=no-cache
