--- a/dev.env
+++ b/dev.env
@@ -6,17 +6,17 @@ API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 BRANCH_STAGING=
 CACHE_CONTROL=no-cache
-DATAGEOADMINHOST=data.geo.admin.ch
+DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DBHOST=pg.bgdi.ch
 DBPORT=5432
 DBSTAGING=dev
 DEBUG=True
 DEPLOY_TARGET=dev
 DYNAMIC_TRANSLATION=1
-GEOADMINHOST=map.geo.admin.ch
+GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
 GEODATA_STAGING=dev
 GIT_BRANCH=
-HOST=api3.geo.admin.ch
+HOST=sys-api3.dev.bgdi.ch
 HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
 IMAGE_TAG=staging
 INSTALLDIR=/var/www/vhosts/mf-chsdi3/private/chsdi
@@ -30,7 +30,7 @@ PRINT_ENV=dev
 PRINT_LOGLEVEL=10
 PRINT_SERVER_HOST=service-print.dev.bgdi.ch
 PRINT_TEMP_DIR=/var/local/print
-PUBLIC_BUCKET_HOST=public.geo.admin.ch
+PUBLIC_BUCKET_HOST=sys-public.dev.bgdi.ch
 RANCHER_LABEL=dev
 ROBOTS_FILE=robots_prod.txt
 SERVER_PORT=6543
@@ -38,8 +38,8 @@ SPHINXHOST=service-sphinxsearch.dev.bgdi.ch
 TOMCAT_PORT=8011
 TOMCAT_SERVER_URL=//vpc-alb-bgdi-dev.intra.bgdi.ch
 VECTOR_BUCKET=bgdi-grid-based-data
-WMSHOST=wms.geo.admin.ch
-WMTS_PUBLIC_HOST=wmts.geo.admin.ch
+WMSHOST=sys-wms.dev.bgdi.ch
+WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 WSGI_APP=/var/www/vhosts/mf-chsdi3/private/chsdi/apache/application.wsgi
 WSGI_PORT=8009
 WSGI_PROCESSES=1
