changed GEODATA_STAGING in dev.env from dev to test

--- a/dev.env
+++ b/dev.env
@@ -14,7 +14,7 @@ DEBUG=True
 DEPLOY_TARGET=dev
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
-GEODATA_STAGING=dev
+GEODATA_STAGING=test
 GIT_BRANCH=
 HOST=sys-api3.dev.bgdi.ch
 HTTP_PROXY=http://ec2-52-28-118-239.eu-central-1.compute.amazonaws.com:80
