BGDIINF_SB-2328: Put all logs to stdout
On k8s all logs should be sent to stdout in order to read them from the
k8s log command or even better from the ELK stack.

--- a/apache/default.conf.in
+++ b/apache/default.conf.in
@@ -7,7 +7,7 @@
     DocumentRoot /var/www/html
 
     LogLevel ${APACHE_LOG_LEVEL}
-    ErrorLog /proc/self/fd/2
+    ErrorLog /dev/stdout
     # CustomLog /dev/null combined
     CustomLog /dev/stdout  combined
 
@@ -18,7 +18,7 @@
     RewriteCond %{REQUEST_URI} !^/checker
     RewriteRule ^/(.*)  http://127.0.0.1:${WSGI_PORT}/$1  [P]
     ProxyPassReverse / http://127.0.0.1:${WSGI_PORT}/
-        
+
 
 </VirtualHost>
 
