--- a/production.ini.in
+++ b/production.ini.in
@@ -1,7 +1,10 @@
 ###
-# app configuration
+# pylons app configuration
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
-###
+#
+# production (generally int and prod) settings for the pylons app.
+# Use this file only in the legacy infrastructure (python2/vhost/ireland)
+
 
 [app:main]
 use = egg:chsdi
