building the doc
with the doc built, the root landing page is accessible (otherwise,
you will have to test the application with /checker or /dev)

FIXME: build to custom CSS (node!!) and RSS feed

--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -162,6 +162,11 @@ autolint:
 	@echo "${GREEN}Auto correction of python files...${RESET}";
 	${AUTOPEP8} --in-place --aggressive --aggressive --verbose --ignore=${PEP8_IGNORE} $(PYTHON_FILES)
 
+# FIXME add the rss and css compilation	
+.PHONY: doc
+doc: 
+	@echo "${GREEN}Building the documentation...${RESET}";
+	cd chsdi/static/doc && ../../../${SPHINX} -W -b html source build || exit 1 ;
 
 
 # TODO: still needed?
