--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -154,6 +154,7 @@ phases:
     commands:
       - echo "=========== BUILD ================="
       - echo Build started on $(date)
+      # TODO: replace with `Makefile.frankfurt` later on
       - make all
       - >
         docker build
