BGDIINF_SB-2328: small fixed in Makefile.frankfurt
The guard-Version was removed from the targets dockerbuild and dockerrun, as the git tag is used for the VERSION variable.
No need to guard- the git tag, as it is either set to the correct value or to unknown, but will not be undefined.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ apache/wsgi.conf
 apache/application.wsgi
 apache/tomcat-print.conf
 chsdi.egg-info
+chsdi/locale
 chsdi/static/doc/build/
 chsdi/static/css/extended.min.css
 chsdi/static/css/blueimp-gallery.min.css
