Fix linkeddatahost urls

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -33,7 +33,7 @@ env:
     WSGI_PROCESSES: 1
     WSGI_THREADS: 15
     CMSGEOADMINHOST: https://cms.geo.admin.ch
-    LINKEDDATAHOST: https://ld.geo.admin.ch
+    LINKEDDATAHOST: https://geo.ld.admin.ch
     CACHE_CONTROL: no-cache
     CI_QUIET: 1
     SYSTEM_PYTHON_CMD: python3
