--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,7 +29,7 @@ env:
     WSGI_PROCESSES: 1
     WSGI_THREADS: 15
     CMSGEOADMINHOST: https://cms.geo.admin.ch
-    LINKEDDATAHOST: https://ld.geo.admin.ch
+    LINKEDDATAHOST: https://geo.ld.admin.ch
     CACHE_CONTROL: no-cache
     CI_QUIET: 1
     # The all important USE_PYTHON3 variable is set by the AWS CodeBuild project
