BGDIINF_SB-2415: replace APACHE_PORT with HTTP_PORT
as part of the port name clean-up

--- a/.env.default
+++ b/.env.default
@@ -1,7 +1,7 @@
 APACHE_BASE_PATH=main
 APACHE_ENTRY_PATH=
 APACHE_LOG_LEVEL=debug
-APACHE_PORT=8009
+HTTP_PORT=8009
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 BRANCH_STAGING=
