BGDIINF_SB-2415: replace SERVER_PORT with HTTP_PORT
as part of the port name clean-up

--- a/.env.default
+++ b/.env.default
@@ -32,7 +32,7 @@ PRINT_TEMP_DIR=/var/local/print
 PUBLIC_BUCKET_HOST=sys-public.dev.bgdi.ch
 RANCHER_LABEL=dev
 ROBOTS_FILE=robots_prod.txt
-SERVER_PORT=6543
+HTTP_PORT=6543
 SPHINXHOST=service-sphinxsearch.dev.bgdi.ch
 TOMCAT_PORT=8011
 TOMCAT_SERVER_URL=//vpc-alb-bgdi-dev.intra.bgdi.ch
