--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ env:
     MODWSGI_CONFIG: production.ini
     PUBLIC_BUCKET_HOST: public.dev.bgdi.ch
     ROBOTS_FILE: robots.txt
-    SERVER_PORT: 6543
+    HTTP_PORT: 6543
     SPHINXHOST: service-sphinxsearch.dev.bgdi.ch
     VECTOR_BUCKET: mf-chsdi3-bgdi-grid-based-data
     WMSHOST: wms-bgdi.dev.bgdi.ch
