--- a/local.ini.in
+++ b/local.ini.in
@@ -28,7 +28,7 @@ debugtoolbar.hosts = 0.0.0.0/0
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = ${SERVER_PORT}
+port = ${HTTP_PORT}
 
 ###
 # logging configuration
