BGDIINF_SB-2415: always run apache on port 80 inside container
HTTP_PORT still used for:
- make serve port
- external port docker run, can be overriden at runtime

--- a/25-mf-chsdi3.conf
+++ b/25-mf-chsdi3.conf
@@ -3,7 +3,7 @@
 # Managed by Puppet
 # ************************************
 
-<VirtualHost *:${HTTP_PORT}>
+<VirtualHost *:80>
   # ServerName mf-chsdi3
 
   ## Vhost docroot
